--- a/second-lesson-pokemon/src/pages/details/components/CardInfo.module.css
+++ b/second-lesson-pokemon/src/pages/details/components/CardInfo.module.css
@@ -65,9 +65,6 @@
     justify-content: space-between;
 }
 
-.card__body_statistics{
-
-}
 
 .card__body_statistics {
 }
@@ -77,7 +74,7 @@
 }
 
 .card__body__image img {
-    min-width: 200px;
+    max-width: 100%;
 }
 
 .card__body__progress__green{
@@ -287,14 +284,27 @@
 
 @media only screen and (max-width: 500px) {
     .header {
-        min-height: 150px;
+        width: 100%;
+        height: 30%;
         background-position-x: 111%;
         background-position-y: -64%;
         background-size: 100px;
     }
 
+    html{
+        width: 100%;
+    }
+
     .header img {
         max-width: 100px;
+    }
+
+    .card__body_statistics{
+        width: 10%;
+    }
+
+    .card__body__image img {
+        max-width: 200px;
     }
 
     .card {
@@ -308,16 +318,56 @@
     }
 
     .card__abilities__block{
-        width: 150px;
+        max-width: 120px;
         height: 80px;
         background-color: #FDD85D;
         border-radius: 14px;
     }
 
     .card__abilities__block_2{
-        width: 150px;
+        max-width: 120px;
         height: 80px;
         background-color: #FF844F;
         border-radius: 14px;
     }
+
+    .card__body__progress__green{
+        background-color: #E5F5ED;
+        border-radius: 4px;
+        width: 100px;
+        overflow: hidden;
+        margin-bottom: 10px;
+    }
+
+    .card__body__progress__attack{
+        background-color: #F7DFDC;
+        border-radius: 4px;
+        width: 100px;
+        overflow: hidden;
+        margin-bottom: 10px;
+    }
+
+    .card__body__progress__defense{
+        background-color: #FEF6E7;
+        border-radius: 4px;
+        width: 100px;
+        overflow: hidden;
+        margin-bottom: 10px;
+    }
+
+    .card__body__progress__speed{
+        background-color: #FDE9DB;
+        border-radius: 4px;
+        width: 100px;
+        overflow: hidden;
+        margin-bottom: 10px;
+    }
+
+    .card__body__progress_bar{
+        width: 0;
+        height: 5px;
+        background-color: #007bff;
+        transition: width 0.3s ease-in-out;
+    }
+
 }
