--- a/four-lesson-pokemon-and-api/second-lesson-pokemon/src/css/Wrapper.css
+++ b/four-lesson-pokemon-and-api/second-lesson-pokemon/src/css/Wrapper.css
@@ -63,19 +63,30 @@
     color: white;
 }
 
-@media only screen and (max-width: 690px)  {
+@media screen and (min-width: 1024px) and (max-width: 1800px) {
+    .card {
+        min-width: 230px;
+        max-width: 230px;
+        margin: 10px;
+    }
+
+    .card__header__number,
+    .card__header__name{
+        font-size: 10px;
+    }
+
+    .card__body__image{
+        min-width: 50px;
+        min-height: 50px;
+    }
+}
+
+@media only screen and (max-width: 690px) {
     .card {
         min-width: 150px;
         max-width: 150px;
-        border: 1px solid rgb(128, 128, 128);
-        margin-top: 20px;
-        margin-right: 20px;
-        margin-bottom: 20px;
-        border-radius: 20px;
-        padding-right: 10px;
-        padding-left: 10px;
+        margin: 10px;
     }
-
     .card__body__image {
         min-width: 100px;
         min-height: 100px;
@@ -89,7 +100,61 @@
         font-weight: 400;
     }
 
-    .card__header__number{
+    .card__header__number {
         font-size: 13px;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    .card {
+        min-width: 120px;
+        max-width: 120px;
+        margin: 10px;
+    }
+
+    .card__header__number,
+    .card__header__name{
+        font-size: 10px;
+    }
+
+    .card__body__image{
+        min-width: 50px;
+        min-height: 50px;
+    }
+}
+
+@media screen and (min-width: 820px) and (max-width: 1180px) {
+    .card {
+        min-width: 180px;
+        max-width: 180px;
+        margin: 10px;
+    }
+
+    .card__header__number,
+    .card__header__name{
+        font-size: 10px;
+    }
+
+    .card__body__image{
+        min-width: 50px;
+        min-height: 50px;
+    }
+}
+
+@media screen and (min-width: 912px) and (max-width: 1000px) {
+    .card {
+        min-width: 150px;
+        max-width: 150px;
+        margin: 10px;
+    }
+
+    .card__header__number,
+    .card__header__name{
+        font-size: 10px;
+    }
+
+    .card__body__image{
+        min-width: 50px;
+        min-height: 50px;
     }
 }
