--- a/TeamHostSecondPart/TeamHost.WEB/Areas/Main/Views/Store/Index.cshtml
+++ b/TeamHostSecondPart/TeamHost.WEB/Areas/Main/Views/Store/Index.cshtml
@@ -31,9 +31,8 @@
                 </select></div>
             <div><select class="js-select">
                     <option value="">Platform: All</option>
-                    <option value="Platform 1">Platform 1</option>
-                    <option value="Platform 2">Platform 2</option>
-                    <option value="Platform 3">Platform 3</option>
+                    <option value="Platform 1">Apple</option>
+                    <option value="Platform 2">Windows</option>
                 </select></div>
             <div><select class="js-select">
                     <option value=""># of Players: All</option>
