--- a/TeamHostSignalRChat/TeamHost.WEB/Views/Shared/_HeaderPartial.cshtml
+++ b/TeamHostSignalRChat/TeamHost.WEB/Views/Shared/_HeaderPartial.cshtml
@@ -2,10 +2,6 @@
 @using TeamHost.Domain.Entities
 @inject SignInManager<User> SignInManager;
 
-@{
-        
-}
-
 <header class="page-header">
     <div class="page-header__inner">
         <div class="page-header__sidebar">
@@ -20,30 +16,51 @@
                 </div>
             </div>
             <div class="page-header__action">
+                <ul class="uk-subnav uk-nav-lang  uk-subnav-pill" uk-margin="">
+                    <li class="uk-first-column">
+                        <a href="#" aria-expanded="false">
+                            <img src="~/img/localization-eng.png" alt="profile" class="profile">
+                            English
+                            <span uk-icon="icon: triangle-down" class="uk-icon"><svg width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><polygon points="5 7 15 7 10 12"></polygon></svg></span>
+
+                        </a>
+                        <div uk-dropdown="mode: hover" class="uk-dropdown uk-dropdown-bottom-left" style="left: 50px; top: 42px;">
+                            <ul class="uk-nav uk-dropdown-nav">
+                                <li>
+                                    <a asp-action="Index" asp-controller="Home" asp-area="Home" asp-route-culture="ru"> <img src="~/img/rus-localization.png" alt="profile" class="profile">Russian</a>
+                                </li>
+                                <li>
+                                    <a href="#"> <img src="~/img/localization-eng.png" alt="profile" class="profile">English</a>
+                                </li>
+
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
                 <a class="action-btn" asp-action="Index" asp-controller="Chat" asp-area="Account"><i class="ico_message"></i><span></span></a>
                 <a class="action-btn" href="#!"><i class="ico_notification"></i><span></span></a>
                 @if (SignInManager.IsSignedIn(User))
                 {
                     <ul class="uk-subnav uk-subnav-pill" uk-margin="">
                         <li class="uk-first-column">
-                                <a href="#" aria-expanded="false">
-                                    <img src="~/img/profile.png" alt="profile" class="profile">
-                                    @User.Identity?.Name
-                                    <span uk-icon="icon: triangle-down" class="uk-icon"><svg width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><polygon points="5 7 15 7 10 12"></polygon></svg></span>
-                                </a>
-                                <div uk-dropdown="mode: click" class="uk-dropdown uk-dropdown-bottom-right" style="left: -54.9844px; top: 42px;">
-                                    <ul class="uk-nav uk-dropdown-nav">
-                                        <li><a asp-action="Index" asp-controller="Profile" asp-area="Account">My account</a></li>
-                                        <li><a href="#">My Password</a></li>
-                                        <li class="uk-nav-divider"></li>
-                                        <li>
-                                            <a
-                                                asp-action="Logout"
-                                                asp-controller="Profile"
-                                                asp-area="Account">Log Out</a>
-                                        </li>
-                                    </ul>
-                                </div>    
+                            <a href="#" aria-expanded="false">
+                                <img src="~/img/profile.png" alt="profile" class="profile">
+                                @User.Identity?.Name
+                                <span uk-icon="icon: triangle-down" class="uk-icon"><svg width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><polygon points="5 7 15 7 10 12"></polygon></svg></span>
+                            </a>
+                            <div uk-dropdown="mode: click" class="uk-dropdown uk-dropdown-bottom-right" style="left: -54.9844px; top: 42px;">
+                                <ul class="uk-nav uk-dropdown-nav">
+                                    <li><a asp-action="Index" asp-controller="Profile" asp-area="Account">My account</a></li>
+                                    <li><a href="#">My Password</a></li>
+                                    <li class="uk-nav-divider"></li>
+                                    <li>
+                                        <a
+                                            asp-action="Logout"
+                                            asp-controller="Profile"
+                                            asp-area="Account">Log Out</a>
+                                    </li>
+                                </ul>
+                            </div>
                         </li>
                     </ul>
                 }
